--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 <div class="p-6">
                     <h3 class="font-bold text-xl mb-2 text-[var(--soft-pink)]">Netflix Data Analysis</h3>
                     <p class="text-sm text-gray-300 mb-2"><b>Tech:</b> Python, Pandas, Seaborn</p>
-                    <a href="https://github.com/sofiyachouhan/Netflix-Data-Analysis" 
+                    <a href="https://github.com/shaifalichouhan/Netflix-Data-Analysis" 
                        target="_blank" 
                        class="text-[var(--vibrant-pink)] hover:text-[var(--deep-maroon)] font-bold">
                         View on GitHub →
@@ -412,7 +412,7 @@
                 <div class="p-6">
                     <h3 class="font-bold text-xl mb-2 text-[var(--soft-pink)]">Titanic Data Analysis</h3>
                     <p class="text-sm text-gray-300 mb-2"><b>Tech:</b> Python, Pandas, Matplotlib</p>
-                    <a href="https://github.com/sofiyachouhan/Titanic-Data-Analysis" 
+                    <a href="https://github.com/shaifalichouhan/Titanic-Data-Analysis" 
                        target="_blank" 
                        class="text-[var(--vibrant-pink)] hover:text-[var(--deep-maroon)] font-bold">
                         View on GitHub →
@@ -430,7 +430,7 @@
                 <div class="p-6">
                     <h3 class="font-bold text-xl mb-2 text-[var(--soft-pink)]">Pizza Sales Analysis</h3>
                     <p class="text-sm text-gray-300 mb-2"><b>Tech:</b> Python, SQL, Pandas, Matplotlib</p>
-                    <a href="https://github.com/sofiyachouhan/Pizza-Sales-Management-System" 
+                    <a href="https://github.com/shaifalichouhan/Pizza-Sales-Management-System" 
                        target="_blank" 
                        class="text-[var(--vibrant-pink)] hover:text-[var(--deep-maroon)] font-bold">
                         View on GitHub →
@@ -512,7 +512,7 @@
                 <a href="https://www.linkedin.com/in/shaifali-chouhan-827926324/" target="_blank" class="w-12 h-12 bg-white rounded-full flex justify-center items-center shadow-lg hover:scale-110 transition">
                     <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="w-6 h-6">
                 </a>
-                <a href="https://github.com/sofiyachouhan" target="_blank" class="w-12 h-12 bg-white rounded-full flex justify-center items-center shadow-lg hover:scale-110 transition">
+                <a href="https://github.com/shaifalichouhan" target="_blank" class="w-12 h-12 bg-white rounded-full flex justify-center items-center shadow-lg hover:scale-110 transition">
                     <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="w-6 h-6">
                 </a>
                 <a href="https://x.com/Shaifali1312?t=ZVUooXQZoema46vBks1gOw&s=09" target="_blank" class="w-12 h-12 bg-white rounded-full flex justify-center items-center shadow-lg hover:scale-110 transition">
